@@ -10,6 +10,7 @@ v2.2.2
 ! imdb::title() returned an empty string for movies that haven't been released yet
 * reworked imdb::title_year() to better handle year-spans (e.g. for serials: "2010-2012")
 * imdb: decoding IMDB external site re-directs to target URLs
+* imdb::cast() now has an optional parameter $clean_ws (default: FALSE) to remove whitespaces (especially line-breaks) in names
 
 v2.2.1 (20.10.2013)
 -------------------
